# decoplanvercel

./: .gitignore  CHATBOX_GUIDE.md  DEPLOYMENT.md  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  package-lock.json  package.json  run_backend.py
app/: globals.css  page.tsx
backend/: requirements-backend.txt  requirements.txt
backend/api/: app.py
backend/lora/: TRAINING_GUIDE.md  __init__.py  evaluate.py  inference.py  prepare_training_data.py  test_lora_model.py  train_lora.py  train_lora_optimized.py  training_configs_optimized.py
backend/rag/: __init__.py  build_furniture_db.py  furniture_retriever.py  rag_inference.py
backend/tests/: test_rag_init.py  test_setup.py
components/: ChatBox.tsx  FurniturePanel.tsx  RoomViewer.tsx
config/: .clang-format
cpp/: CMakeLists.txt
cpp/examples/: multimodal_inference.cpp  simple_inference.cpp
cpp/include/: llm_wrapper.h  multimodal_processor.h
cpp/src/: llm_wrapper.cpp  multimodal_processor.cpp
data/datasets/Input/: Furniture Dataset - Furniture Data.csv  hdb_interior_design_prompts_300.csv
data/datasets/Output/: lora_training_data_500.json  sample_lora_training_data.json  sample_lora_training_data_500.json  training_examples_500.json  (+1 more)
decoplan-demo/app/: layout.tsx
decoplan-demo/components/: FurnitureItem.tsx
decoplan-demo/lib/: furnitureData.ts  mockRAG.ts
docs/api/: API_DOCS.md
docs/backend/: IMPLEMENTATION_SUMMARY.md  QUICKSTART_RAG_LORA.md  RAG_GENERATION_COMPLETE.md  RAG_LORA_README.md
docs/cpp/: BUILD.md  CHANGELOG.md  USAGE.md
docs/setup/: FULLSTACK_SETUP.md  INSTALLATION_STATUS.md  INSTALL_GUIDE.md  OVERVIEW.md  QUICKSTART.md
frontend/: .env.development  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  README-BACKEND.md  index.css
lib/: furnitureData.ts  mockRAG.ts
scripts/data/: add_is_accessory_to_training.py  rag_to_training_examples.py
scripts/deployment/: start_backend.sh
scripts/models/: download_model.py  download_model.sh
scripts/setup/: build.sh  setup_backend.sh  setup_rag_lora.sh
types/: chat.ts  furniture.ts
(+13 files in other folders)
